bee-common/bee-packable-derive/tests/fail/overlapping_discriminant.stderr
error: unreachable pattern
  --> $DIR/overlapping_discriminant.rs:13:22
   |
13 |     #[packable(tag = 0)]
   |                      ^
   |
note: the lint level is defined here
  --> $DIR/overlapping_discriminant.rs:8:10
   |
8  | #[derive(Packable)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `Packable` (in Nightly builds, run with -Z macro-backtrace for more info)
